<resources>
    <string name="app_name">Quick Mart</string>
    <string name="textSkipForNow">Skip for Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_next">Next</string>
    <string name="textTitleOnboarding1">Explore a wide range of products</string>
    <string name="textSubTitleOnboarding1">Explore a wide range of products at your fingertips. QuickMart offers an extensive collection to suit your needs.</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="textStar">*</string>
    <string name="login">Login</string>
    <string name="subTitle">Already have an account?</string>
    <string name="fullName">Full Name</string>
    <string name="passwordText">Password</string>
    <string name="textHome">Home</string>
    <string name="navTextCart">Cart</string>
    <string name="navTextCategories">Categories</string>
    <string name="navTextHome">Home</string>
    <string name="navTextProfile">Profile</string>
    <string name="navTextWishlist">Wishlist</string>
    <string name="backBtn">Back</string>
</resources>