<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home"
        android:title="@string/navTextHome" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/icon_category"
        android:title="@string/navTextCategories" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/icon_cart"
        android:title="@string/navTextCart" />

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/icon_wishlist"
        android:title="@string/navTextWishlist" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_profile"
        android:title="@string/navTextProfile" />

</menu>