<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/defaultLayoutPadding"
    android:orientation="vertical"
    tools:context=".fragment.onboarding.Onboarding1Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/app_small_icon"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button_bg"
            android:fontFamily="@font/sans_semibold"
            android:text="@string/textSkipForNow"
            android:textColor="@color/skip_btn_text_color"
            app:backgroundTint="@null"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/bg_onboarding1" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.App.Heading2_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/textTitleOnboarding1"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.App.Body1_Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/sans_semibold"
        android:text="@string/textSubTitleOnboarding1"
        android:textAlignment="center"
        android:textColor="@color/grey150" />

    <Button
        android:id="@+id/nextBtn"
        style="@style/TextAppearance.App.Button1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultButtonHeight"
        android:layout_gravity="bottom"
        android:background="@drawable/default_button_bg"
        android:text="@string/text_next"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

</FrameLayout>